Fix typo in Prettier script flag
Corrected the Prettier `-check` flag to `--check` in `package.json` scripts. This ensures the Prettier command runs as intended without errors.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"exports": "./src/index.js",
 	"scripts": {
 		"prepare": "husky",
-		"prettier": "prettier -check .",
+		"prettier": "prettier --check .",
 		"prettier:fix": "prettier --write ."
 	},
 	"lint-staged": {
